--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
     --blanco: #ffffff;
-    --primario: #FFC107;
+    --primario: #24d1b4;
     --secundario: #0097A7;
     --gris: #757575;
     --oscuro: #212121;
